<resources>
    <string name="app_name">SchlubController</string>
    <string name="hLabel">Host:</string>
    <string name="master">Master </string>
    <string name="master_ip">Master IP: </string>
    <string name="subnetDefault">255.255.255</string>
    <string name="subnet">Subnet: </string>
    <string name="volume">Volume: </string>
    <string name="shutdown">Shutdown</string>
    <string name="reboot">Reboot</string>
    <string name="refresh">Refresh Hostlist</string>
    <string name="upgrade">Upgrade</string>
    <string name="sound">Sound: </string>
    <string name="auto">Auto</string>
    <string name="phrase">Phrase: </string><string name="matag">MainActivity</string>
    <string name="hostRefreshMessage">Refreshing Host List</string>
    <string name="returnHostRefreshMessage">Host List Refreshed</string>
    <string name="all">All Hosts</string>
    <string name="service">service:schlub.x</string>
    <string name="volumeCmd">Volume</string>
    <string name="phraseCmd">Phrase</string>
    <string name="scatterCmd">PhraseScatter</string>
    <string name="soundCmd">Sound</string>
    <string name="maxEventsCmd">MaxEvents</string>
    <string name="collectionCmd">Collection</string>
    <string name="collectionListCmd">CollectionList</string>
    <string name="threadsCmd">Threads</string>
    <string name="autoCmd">Auto</string>
    <string name="soundEnableCmd">SoundEnable</string>
    <string name="sLogLabel">Status Log</string>
    <string name="manualCmd">Manual</string>
    <string name="neverSet">Never Set</string>
    <string name="threads">Threads: </string>
    <string name="speaker">Speaker: </string>
    <string name="status">Status</string>
    <string name="control">Control</string>
    <string name="isMaster">Is Master</string>
    <string name="chooseSound">Choose Sound</string>
    <string name="chooseCollection">Choose Collection</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="done">Done</string>
    <string name="enable">Enable Sound</string>
    <string name="disable">Disable Sound</string>
    <string name="dismiss">Dismiss</string>
    <string name="scatter">Scatter</string>
    <string name="pscatter">Phrase Scatter</string>
    <string name="maxEventsL">Max Events: </string>
    <string name="maxEvents">Max Events</string>
</resources>
